--- a/src/components/newcollections/NewCollections.css
+++ b/src/components/newcollections/NewCollections.css
@@ -4,7 +4,6 @@
   align-items: center;
   gap: 10px;
   height: 90vh;
-  margin-bottom: 100px;
 }
 
 .new-collections h1 {
@@ -21,9 +20,6 @@
   margin-bottom: 20px;
 }
 
-.collections {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  margin-top: 50px;
-  gap: 30px;
+.new-collections-item {
+  display: flex;
 }
