--- a/src/components/newsletter/Newsletter.css
+++ b/src/components/newsletter/Newsletter.css
@@ -1,5 +1,5 @@
 .newsletter {
-  width: 65%;
+  width: 100%;
   height: 40vh;
   display: flex;
   flex-direction: column;
@@ -7,7 +7,6 @@
   justify-content: center;
   margin: auto;
   padding: 0px 140px;
-  margin-bottom: 150px;
   background: linear-gradient(180deg, #fde1ff 0%, #e1ffea22 60%);
   gap: 30px;
 }
