--- a/src/components/offers/Offers.css
+++ b/src/components/offers/Offers.css
@@ -1,7 +1,9 @@
 .offers {
   display: flex;
   margin: auto;
+
   padding: 0px 140px;
+  width: 100%;
   margin-top: 10em;
   background: linear-gradient(180deg, #fde1ff 0%, #e1ffea22 60%);
 }
